# mpicudatest

./: CMakeLists.txt  main.cpp  main.cu
